# mcp-demo

./: .env.example  AUTHENTICATION.md  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: MCPFrontend.js
servers/: README.md  auth_groups_roles.py  auth_mcp_server.py  auth_utils.py  datasets.py  decorators.py  medicare_server.py
