[project]
name = "mcp-server-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.23.1",
    "fastapi[standard]>=0.116.1",
    "mcp>=1.12.2",
    "msgraph-sdk>=1.40.0",
    "requests>=2.32.4",
]
